--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "echo 'No build needed'"
   },
   "dependencies": {
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "resend": "^3.0.0"
   }
 }
